--- a/estilos/bio.css
+++ b/estilos/bio.css
@@ -148,72 +148,31 @@ a {
 
     }
 }
-
-/*Termina el Nav*/
-.conteiner {
-    position: relative;
-    height: 500px;
-    display: flex;
-    background-color: white;
-    justify-content: center;
-
-}
-
-.foto {
-    position: absolute;
-    width: 90%;
-    height: 500px;
-    background-image: url('../img/Santa_Anna.jpg');
-    background-size: cover;
-}
-
-.rectangle {
-    position: absolute;
-    left: 200px;
-    top: 100px;
+/*TERMINA EL NAV*/
+.texto{
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    width: 400px;
-    height: 300px;
-    background-color: white;
-
-}
-
-.resume {
-
-    width: 350px;
-    height: 150px;
-    padding-left: 20px;
-}
-
-.padre {
-    height: 500px;
-    display: flex;
-    gap: 50px;
-    justify-content: center;
     align-items: center;
     align-content: center;
-    background-color: white;
+    width: 100%;
+    height: 100%;
 }
-
-.hijos {
+.container{
     flex-shrink: 1;
-    width: 300px;
-    height: 400px;
     background-color: whitesmoke;
+    height: 100%;
+    max-width: 1200px;
+    min-width: 300px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    gap: 40px;
+    
 }
-.hijos h2{
-    width: 100%;
-    height: 70px;
-}
-
-.hijos img {
-    width: 100%;
-    height: 50%;
-    object-fit: cover;
-
+h1{
+    text-align: center; 
 }
 
 /*Footer*/
@@ -246,40 +205,4 @@ footer {
 
 .footer-list a {
     color: #012D66;
-}
-
-@media (max-width: 768px) {
-
-    .foto {
-        height: 250px;
-    }
-
-    .rectangle {
-        height: 250px;
-        width: 100%;
-        top: 100%;
-        left: 0%;
-
-    }
-
-    .padre {
-        flex-direction: column;
-        height: 1400px;
-    }
-
-    .hijos {
-        width: 80%;
-        height: 300px;
-        margin-left: 5%;
-        margin-right: 5%;
-    }
-
-    .hijos img {
-        object-fit: cover;
-        object-position: center;
-    }
-
-    .footer-list {
-        flex-wrap: wrap;
-    }
 }
